[package]
name = "goku"
version = "0.1.3"
authors = ["ladroid"]
edition = "2021"
license = "Apache-2.0"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.36.0"
nalgebra = "0.32.2"
imgui = { version = "0.11.0", features = ["docking"] }
imgui-sdl2 = "0.15.3"
imgui-opengl-renderer = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.163"
rfd = "0.11.3"
rand = "0.8.5"
glow = "0.12.2"
webbrowser = "0.8.11"
chrono = "0.4.31"
copypasta = "0.10.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "auto-initialize"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["psapi"] }

[target.'cfg(target_os = "unix")'.dependencies]
libc = "0.2"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image", "ttf", "mixer", "raw-window-handle"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[build-dependencies]
embed-resource = "2.4.1"